--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -41,12 +41,12 @@ jobs:
         id: clangformat
         run: |
           if [ "${{ contains(github.event.pull_request.labels.*.name, 'run-ci/clang-format') }}" = "true" ]; then
-            echo '::set-output name=run::true'
+            echo "run=true" >> "${GITHUB_OUTPUT}"
           elif git diff --name-only origin/${{ github.base_ref }} HEAD | grep -Eq '.*\.\(cpp|cxx|c|hpp|hxx|h\)$' ; then
-            echo '::set-output name=run::true'
+            echo "run=true" >> "${GITHUB_OUTPUT}"
             echo 'C/C++ code has changed, need to run clang-format.'
           else
-            echo '::set-output name=run::false'
+            echo "run=false" >> "${GITHUB_OUTPUT}"
           fi
       - name: Check files for eslint
         id: eslint
@@ -134,7 +134,8 @@ jobs:
           if [ "${{ steps.label.outputs.check-all }}" == 'true' ]; then
             find . -regex '.*\.\(c\|cpp\|cxx\|h\|hpp\|hxx\)$' -exec clang-format -i --style=file '{}' \;
           else
-            git diff --name-only origin/${{ github.base_ref }} HEAD | grep -E '.*\.\(cpp|cxx|c|hpp|hxx|h\)$' | xargs -n 1 -r clang-format -i --style=file
+            git diff --name-only origin/${{ github.base_ref }} HEAD | grep -E '.*\.\(cpp|cxx|c|hpp|hxx|h\)$' | \
+            xargs -n 1 -r clang-format -i --style=file
           fi
           git status --porcelain=v1 > /tmp/porcelain
           if [ -s /tmp/porcelain ]; then
