--- a/.github/workflows/packaging.yml
+++ b/.github/workflows/packaging.yml
@@ -78,7 +78,7 @@ jobs:
           entries.sort(key=lambda k: (data['arch_order'].index(k['arch']), k['distro'], k['version']))
           matrix = json.dumps({'include': entries}, sort_keys=True)
           print('Generated Matrix: ' + matrix)
-          with open(os.env['GITHUB_ENV'], 'a') as f:
+          with open(os.environ['GITHUB_ENV'], 'a') as f:
               f.write('matrix=' + matrix)
       - name: Failure Notification
         uses: rtCamp/action-slack-notify@v2
