wmi_alerts: Add labels for service

--- a/health/health.d/wmi.conf
+++ b/health/health.d/wmi.conf
@@ -135,7 +135,7 @@ component: Services
     every: 1m
      warn: $this >= 1
     delay: down 1h multiplier 1.5 max 2h
-     info: number of connection failures in the last 10 minutes
+     info: number of errors reported for $label:service in the last 10 minutes
        to: sysadmin
 
 
