wmi_alerts: Adjust delay

--- a/health/health.d/wmi.conf
+++ b/health/health.d/wmi.conf
@@ -134,7 +134,7 @@ component: Services
     units: failures
     every: 1m
      warn: $this >= 1
-    delay: down 1h multiplier 1.5 max 2h
+    delay: down 10m multiplier 1.5 max 30m
      info: number of errors reported for $label:service in the last 10 minutes
        to: sysadmin
 
