wmi_alerts: Update lookup

--- a/health/health.d/wmi.conf
+++ b/health/health.d/wmi.conf
@@ -130,7 +130,7 @@ component: Services
        os: *
     hosts: *
  families: *
-   lookup: sum -10m unaligned absolute match-names foreach *error*,*stressed*,*nonrecover*
+   lookup: max -60s unaligned of error,stressed,nonrecover
     units: failures
     every: 1m
      warn: $this >= 1
