wmi_alerts: Adjust info

--- a/health/health.d/wmi.conf
+++ b/health/health.d/wmi.conf
@@ -135,7 +135,7 @@ component: Services
     every: 1m
      warn: $this >= 1
     delay: down 10m multiplier 1.5 max 30m
-     info: number of errors reported for $label:service in the last 10 minutes
+     info: service $label:service is not operating properly
        to: sysadmin
 
 
