--- a/health/health.d/wmi.conf
+++ b/health/health.d/wmi.conf
@@ -141,21 +141,21 @@ component: Services
 
 ## TCP
 
- template: wmi_tcp_connections_failure
-       on: wmi.tcp_conns_failures
-    class: Errors
-     type: Windows
-component: TCP
-       os: *
-    hosts: *
- families: *
-   lookup: sum -10m unaligned absolute match-names of tcp_conns_failures_ipv4,tcp_conns_failures_ipv6
-    units: failures
-    every: 1m
-     warn: $this >= 5
-    delay: down 1h multiplier 1.5 max 2h
-     info: number of connection failures in the last 10 minutes
-       to: sysadmin
+# template: wmi_tcp_connections_failure
+#       on: wmi.tcp_conns_failures
+#    class: Errors
+#     type: Windows
+#component: TCP
+#       os: *
+#    hosts: *
+# families: *
+#   lookup: sum -10m unaligned absolute match-names of tcp_conns_failures_ipv4,tcp_conns_failures_ipv6
+#    units: failures
+#    every: 1m
+#     warn: $this >= 60
+#    delay: down 10m multiplier 1.5 max 1h
+#     info: number of connection failures in the last 10 minutes
+#       to: sysadmin
 
 
 ## Disk
