wmi_alerts: Upddate lookup

--- a/health/health.d/wmi.conf
+++ b/health/health.d/wmi.conf
@@ -149,7 +149,7 @@ component: Services
 #       os: *
 #    hosts: *
 # families: *
-#   lookup: sum -10m unaligned absolute match-names of tcp_conns_failures_ipv4,tcp_conns_failures_ipv6
+#   lookup: sum -10m unaligned of ipv4,ipv6
 #    units: failures
 #    every: 1m
 #     warn: $this >= 60
