Skip building NFACCT plugin on RHEL clones.
They lack the required dependencies.

--- a/netdata.spec.in
+++ b/netdata.spec.in
@@ -27,20 +27,6 @@ AutoReqProv: yes
 %global _have_ebpf 0
 %endif
 
-# Disable FreeIPMI on Amazon Linux
-%if 0%{?amzn}
-%global _have_freeipmi 0
-%else
-%global _have_freeipmi 1
-%endif
-
-# Disable the NFACCT plugin on Amazon Linux
-%if 0%{?amzn}
-%global _have_nfacct 0
-%else
-%global _have_nfacct 1
-%endif
-
 # Mitigate the cross-distro mayhem by strictly defining the libexec destination
 %define _prefix /usr
 %define _sysconfdir /etc
@@ -48,11 +34,15 @@ AutoReqProv: yes
 %define _libexecdir /usr/libexec
 %define _libdir /usr/lib
 
-# Fedora doesn’t define this, but other distros do
-%{!?_presetdir:%global _presetdir %{_libdir}/systemd/system-preset}
-
 # Redefine centos_ver to standardize on a single macro
 %{?rhel:%global centos_ver %rhel}
+
+# Disable NFACCT for RHEL equivalents
+%if 0%{?centos_ver}
+%global _have_nfacct 0
+%else
+%global _have_nfacct 1
+%endif
 
 Summary:	Real-time performance monitoring, done right!
 Name:		netdata
@@ -80,7 +70,7 @@ BuildRequires: git-core
 BuildRequires: autoconf
 %if 0%{?fedora} || 0%{?rhel} >= 7 || 0%{?suse_version} >= 1140
 BuildRequires: autoconf-archive
-%if 0%{?rhel} <= 8 && 0%{?amzn} < 2023
+%if 0%{?rhel} <= 8
 BuildRequires: autogen
 %endif
 %endif
@@ -98,14 +88,12 @@ BuildRequires: protobuf-devel
 BuildRequires: libprotobuf-c-devel
 BuildRequires: liblz4-devel
 BuildRequires: libjson-c-devel
-BuildRequires: libyaml-devel
 %else
 %if 0%{?fedora}
 BuildRequires: protobuf-devel
 BuildRequires: protobuf-c-devel
 BuildRequires: lz4-devel
 BuildRequires: json-c-devel
-BuildRequires: libyaml-devel
 %else
 %if 0%{?centos_ver} >= 8
 BuildRequires: protobuf-devel
@@ -113,16 +101,11 @@ BuildRequires: protobuf-c-devel
 %endif
 BuildRequires: lz4-devel
 BuildRequires: json-c-devel
-BuildRequires: libyaml-devel
 %endif
 %endif
 
 # Core build requirements for service install
-%if 0%{?suse_version}
-BuildRequires: systemd-rpm-macros
-%else
-BuildRequires: systemd
-%endif
+%{netdata_initd_buildrequires}
 
 # Runtime dependencies
 #
@@ -139,6 +122,8 @@ Requires: python3
 # Core requirements for the install to succeed
 Requires(pre): /usr/sbin/groupadd
 Requires(pre): /usr/sbin/useradd
+
+%{netdata_initd_requires}
 
 # #####################################################################
 # External plugin package dependencies
@@ -162,30 +147,17 @@ Recommends: netdata-plugin-go
 # Note: Some or all of the Packages may be found in the EPEL repo,
 # rather than the standard ones
 
-# epbf dependencies
-%if 0%{?_have_ebpf}
-%if 0%{?suse_version}
-BuildRequires:	libelf-devel
-%else
-BuildRequires:	elfutils-libelf-devel
-%endif
-%endif
-# end - ebpf dependencies
-
 # nfacct plugin dependencies
-%if %{_have_nfacct}
+
+%if 0%{?_have_nfacct}
 BuildRequires:  libmnl-devel
-%if 0%{?fedora} || 0%{?suse_version} >= 1140
 BuildRequires:  libnetfilter_acct-devel
-%endif
 %endif
 
 # end nfacct plugin dependencies
 
 # freeipmi plugin dependencies
-%if %{_have_freeipmi}
 BuildRequires:  freeipmi-devel
-%endif
 # end - freeipmi plugin dependencies
 
 # CUPS plugin dependencies
@@ -279,9 +251,7 @@ install -m 644 -p system/logrotate/netdata "${RPM_BUILD_ROOT}%{_sysconfdir}/logr
 
 # ###########################################################
 # Install freeipmi
-%if %{_have_freeipmi}
 install -m 4750 -p freeipmi.plugin "${RPM_BUILD_ROOT}%{_libexecdir}/%{name}/plugins.d/freeipmi.plugin"
-%endif
 
 # ###########################################################
 # Install apps.plugin
@@ -327,10 +297,15 @@ install -m 750 -p packaging/installer/netdata-uninstaller.sh \
 
 # ###########################################################
 # Install netdata service
+%if %{with systemd}
 install -m 755 -d "${RPM_BUILD_ROOT}%{_unitdir}"
 install -m 644 -p system/systemd/netdata.service "${RPM_BUILD_ROOT}%{_unitdir}/netdata.service"
-install -m 755 -d "${RPM_BUILD_ROOT}%{_presetdir}"
-install -m 644 -p system/systemd/50-netdata.preset "${RPM_BUILD_ROOT}%{_presetdir}/50-netdata.preset"
+%else
+# install SYSV init stuff
+install -d "${RPM_BUILD_ROOT}/etc/rc.d/init.d"
+install -m 755 system/initd/init.d/netdata \
+        "${RPM_BUILD_ROOT}/etc/rc.d/init.d/netdata"
+%endif
 
 # ############################################################
 # Package Go within netdata (TBD: Package it separately)
@@ -448,25 +423,13 @@ for item in docker nginx varnish haproxy adm nsd proxy squid ceph nobody I2C; do
 done
 
 %post
-%if 0%{?suse_version}
-%service_add_post netdata.service
-%else
-%systemd_post netdata.service
-%endif
+%{netdata_init_post}
 
 %preun
-%if 0%{?suse_version}
-%service_del_preun netdata.service
-%else
-%systemd_preun netdata.service
-%endif
+%{netdata_init_preun}
 
 %postun
-%if 0%{?suse_version}
-%service_del_postun netdata.service
-%else
-%systemd_postun_with_restart netdata.service
-%endif
+%{netdata_init_postun}
 
 %clean
 rm -rf "${RPM_BUILD_ROOT}"
@@ -484,8 +447,11 @@ rm -rf "${RPM_BUILD_ROOT}"
 %{_sbindir}/netdatacli
 %{_sbindir}/netdata-claim.sh
 
+%if %{with systemd}
 %{_unitdir}/netdata.service
-%{_presetdir}/50-netdata.preset
+%else
+%{_sysconfdir}/rc.d/init.d/netdata
+%endif
 
 %dir %{_libexecdir}/%{name}
 %dir %{_libexecdir}/%{name}/plugins.d
@@ -542,12 +508,12 @@ rm -rf "${RPM_BUILD_ROOT}"
 %attr(0770,netdata,netdata) %dir %{_localstatedir}/lib/%{name}/registry
 
 # Free IPMI belongs to a different sub-package
-%if %{_have_freeipmi}
 %exclude %{_libexecdir}/%{name}/plugins.d/freeipmi.plugin
-%endif
 
 # NFACCT belongs to a different sub-package
+%if 0%{?_have_nfacct}
 %exclude %{_libexecdir}/%{name}/plugins.d/nfacct.plugin
+%endif
 
 # Charts.d belongs to a different sub-package
 %exclude %{_libexecdir}/%{name}/plugins.d/charts.d.plugin
@@ -599,7 +565,6 @@ Requires: netdata = %{version}
 %attr(0750,root,netdata) %{_libexecdir}/%{name}/plugins.d/cups.plugin
 %endif
 
-%if %{_have_freeipmi}
 %package plugin-freeipmi
 Summary: The FreeIPMI metrics collection plugin for the Netdata Agent
 Group: Applications/System
@@ -611,8 +576,8 @@ Requires: netdata = %{version}
 
 %files plugin-freeipmi
 %attr(4750,root,netdata) %{_libexecdir}/%{name}/plugins.d/freeipmi.plugin
-%endif
 
+%if 0%{?_have_nfacct}
 %package plugin-nfacct
 Summary: The NFACCT metrics collection plugin for the Netdata Agent
 Group: Applications/System
@@ -627,6 +592,7 @@ Requires: netdata = %{version}
 
 %files plugin-nfacct
 %attr(4750,root,netdata) %{_libexecdir}/%{name}/plugins.d/nfacct.plugin
+%endif
 
 %package plugin-chartsd
 Summary: The charts.d metrics collection plugin for the Netdata Agent
@@ -759,13 +725,8 @@ Requires: netdata = %{version}
 %caps(cap_dac_read_search=ep) %{_libexecdir}/%{name}/plugins.d/slabinfo.plugin
 
 %changelog
-* Fri Apr 07 2023 Austin Hemmelgarn <austin@netdata.cloud> 0.0.0-19
+* Tue Nov 01 2022 Austin Hemmelgarn <austin@netdata.cloud> 0.0.0-17
 - Split additional plugins out in their own packages.
-* Tue Mar 21 2023 Austin Hemmelgarn <austin@netdata.cloud> 0.0.0-18
-- Fix systemd handling to follow BCP.
-- Drop pre-systemd init support.
-* Thu Feb 16 2023 Konstantin Shalygin <k0ste@k0ste.ru> 0.0.0-17
-- Added eBPF build dependency
 * Wed Feb 03 2022 Austin Hemmelgarn <austin@netdata.cloud> 0.0.0-16
 - Bundle updater script in native packages.
 * Mon Oct 11 2021 Austin Hemmelgarn <austin@netdata.cloud> 0.0.0-15
@@ -803,8 +764,9 @@ First draft refactor on package dependencies section
 * Wed Jan 02 2019 Pawel Krupa <pkrupa@redhat.com> - 0.0.0-3
 - Temporary set version statically
 - Fix changelog ordering
-- Comment-out node.d configuration directory
+- Comment-out node.d configuration directory 
 * Wed Jan 02 2019 Pawel Krupa <pkrupa@redhat.com> - 0.0.0-2
 - Fix permissions for log files
 * Sun Nov 15 2015 Alon Bar-Lev <alonbl@redhat.com> - 0.0.0-1
 - Initial add.
+
