--- a/contrib/debian/rules
+++ b/contrib/debian/rules
@@ -116,6 +116,11 @@ override_dh_install:
 	mv -f $(TEMPTOP)/usr/libexec/netdata/plugins.d/slabinfo.plugin \
 	$(TOP)-plugin-slabinfo/usr/libexec/netdata/plugins.d/slabinfo.plugin
 
+	# Add perf plugin install rules
+	mkdir -p $(TOP)-plugin-perf/usr/libexec/netdata/plugins.d/
+	mv -f $(TEMPTOP)/usr/libexec/netdata/plugins.d/perf.plugin \
+	$(TOP)-plugin-perf/usr/libexec/netdata/plugins.d/perf.plugin
+
 	# Set the rest of the software in the main package
 	#
 	cp -rp $(TEMPTOP)/usr $(TOP)
@@ -170,8 +175,6 @@ override_dh_fixperms:
 	#
 	chmod 0755 $(TOP)/usr/libexec/netdata/netdata-updater.sh
 
-	chmod 0750 $(TOP)/usr/libexec/netdata/plugins.d/perf.plugin
-
 	# debugfs plugin
 	chmod 0750 $(TOP)/usr/libexec/netdata/plugins.d/debugfs.plugin
 
@@ -182,6 +185,9 @@ override_dh_fixperms:
 
 	# slabinfo package
 	chmod 0750 $(TOP)-plugin-slabinfo/usr/libexec/netdata/plugins.d/slabinfo.plugin
+
+	# perf package
+	chmod 0750 $(TOP)-plugin-perf/usr/libexec/netdata/plugins.d/perf.plugin
 
 	# Go plugin package
 	chmod 0750 $(TOP)-plugin-go/usr/libexec/netdata/plugins.d/go.d.plugin
