add and load title from config

--- a/health/health.d/ram.conf
+++ b/health/health.d/ram.conf
@@ -2,6 +2,7 @@
 # you can disable an alarm notification by setting the 'to' line to: silent
 
     alarm: ram_in_use
+    title: This is a test title, hello. For family $family and collected via $label:_collect_module
        on: system.ram
     class: Utilization
      type: System
