--- a/Makefile.am
+++ b/Makefile.am
@@ -241,10 +241,14 @@ ML_FILES += \
     ml/ADCharts.cc \
     ml/Config.h \
     ml/Config.cc \
+    ml/Chart.cc \
+    ml/Chart.h \
+    ml/Stats.h \
     ml/Dimension.cc \
     ml/Dimension.h \
     ml/Host.h \
     ml/Host.cc \
+    ml/Queue.h \
     ml/Query.h \
     ml/KMeans.h \
     ml/KMeans.cc \
@@ -265,13 +269,6 @@ ml/Host.$(OBJEXT) : CXXFLAGS += -Wno-psabi
 ml/KMeans.$(OBJEXT) : CXXFLAGS += -Wno-psabi
 ml/ml.$(OBJEXT) : CXXFLAGS += -Wno-psabi
 
-endif
-
-
-if ENABLE_ML_TESTS
-ML_TESTS_FILES = \
-    ml/SamplesBufferTests.cc \
-    $(NULL)
 endif
 
 IDLEJITTER_PLUGIN_FILES = \
@@ -926,7 +923,6 @@ NETDATA_FILES = \
     $(PROFILE_PLUGIN_FILES) \
     $(HEALTH_PLUGIN_FILES) \
     $(ML_FILES) \
-    $(ML_TESTS_FILES) \
     $(IDLEJITTER_PLUGIN_FILES) \
     $(PLUGINSD_PLUGIN_FILES) \
     $(REGISTRY_PLUGIN_FILES) \
@@ -1012,11 +1008,6 @@ if ENABLE_ACLK
     netdata_LDADD += $(OPTIONAL_PROTOBUF_LIBS) \
     $(OPTIONAL_ATOMIC_LIBS) \
     $(NULL)
-endif
-
-if ENABLE_ML_TESTS
-    netdata_LDADD += $(OPTIONAL_ML_TESTS_LIBS) \
-        $(NULL)
 endif
 
 netdata_LINK = $(CXXLD) $(CXXFLAGS) $(LDFLAGS) -o $@
