Fix handling of python-based build matrix generation.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -183,41 +183,10 @@ jobs:
           sudo apt-get update && sudo apt-get install -y python3-ruamel.yaml
       - name: Read build matrix
         id: set-matrix
-        shell: python3 {0}
         run: |
-          from ruamel.yaml import YAML
-          import os
-          import json
-          yaml = YAML(typ='safe')
-          entries = list()
-
-          with open('.github/data/distros.yml') as f:
-              data = yaml.load(f)
-
-          for i, v in enumerate(data['include']):
-              e = {
-                'artifact_key': v['distro'] + str(v['version']).replace('.', ''),
-                'version': v['version'],
-              }
-
-              if 'base_image' in v:
-                e['distro'] = ':'.join([v['base_image'], str(v['version'])])
-              else:
-                e['distro'] = ':'.join([v['distro'], str(v['version'])])
-
-              if 'env_prep' in v:
-                e['env_prep'] = v['env_prep']
-
-              if 'jsonc_removal' in v:
-                e['jsonc_removal'] = v['jsonc_removal']
-
-              entries.append(e)
-
-          entries.sort(key=lambda k: k['distro'])
-          matrix = json.dumps({'include': entries}, sort_keys=True)
-          print('Generated Matrix: ' + matrix)
-          with open(os.environ['GITHUB_ENV'], 'a') as f:
-              f.write('matrix=' + matrix)
+          matrix="$(.github/scripts/gen-matrix-build.py)"
+          echo "Generated matrix: ${matrix}"
+          echo "matrix=${matrix}" >> "${GITHUB_OUTPUT}"
       - name: Failure Notification
         uses: rtCamp/action-slack-notify@v2
         env:
