--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -413,10 +413,11 @@ jobs:
       - name: Prepare artifact directory
         id: prepare
         run: |
-          mkdir -p artifacts || exit 1
-          echo "9999.0.0-0" > artifacts/latest-version.txt || exit 1
-          cp dist-tarball/* artifacts || exit 1
-          cd artifacts || exit 1
+          mkdir -p artifacts/download/test || exit 1
+          echo "9999.0.0-0" > artifacts/download/test/latest-version.txt || exit 1
+          cp dist-tarball/* artifacts/download/test || exit 1
+          echo 'Redirect 301 "/latest" "/test"' > artifacts/.htaccess || exit 1
+          cd artifacts/download/test || exit 1
           ln -s ${{ needs.build-dist.outputs.distfile }} netdata-latest.tar.gz || exit 1
           sha256sum -b ./* > "sha256sums.txt" || exit 1
           cat sha256sums.txt
@@ -549,10 +550,16 @@ jobs:
         with:
           name: final-artifacts
           path: artifacts
+      - name: Prepare artifacts directory
+        id: prepare
+        run: |
+          mkdir -p download/test
+          mv artifacts/* download/test
+          echo 'Redirect 301 "/latest" "/test"' > .htaccess
       - name: Verify that artifacts work with installer
         id: verify
         env:
-          NETDATA_TARBALL_BASEURL: http://localhost:8080/artifacts
+          NETDATA_TARBALL_BASEURL: http://localhost:8080/
         run: packaging/installer/kickstart.sh --build-only --dont-start-it --disable-telemetry --dont-wait
       - name: Failure Notification
         uses: rtCamp/action-slack-notify@v2
@@ -598,10 +605,16 @@ jobs:
         with:
           name: final-artifacts
           path: artifacts
+      - name: Prepare artifacts directory
+        id: prepare
+        run: |
+          mkdir -p download/test
+          mv artifacts/* download/test
+          echo 'Redirect 301 "/latest" "/test"' > .htaccess
       - name: Verify that artifacts work with installer
         id: verify
         env:
-          NETDATA_TARBALL_BASEURL: http://localhost:8080/artifacts
+          NETDATA_TARBALL_BASEURL: http://localhost:8080/
         run: packaging/installer/kickstart.sh --static-only --dont-start-it --disable-telemetry
       - name: Failure Notification
         uses: rtCamp/action-slack-notify@v2
