use for other notification methods as well

--- a/health/health.d/httpcheck.conf
+++ b/health/health.d/httpcheck.conf
@@ -29,7 +29,7 @@ component: HTTP endpoint
        to: webmaster
 
  template: httpcheck_web_service_bad_status
-    title: Watch out, host $label:_collect_job gets bad status, so it is $status.
+    title: HTTP status check for $label:_collect_job
  families: *
        on: httpcheck.status
     class: Workload
